--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ astunparse==1.6.3
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+contourpy==1.2.0
+cycler==0.12.1
 flatbuffers==23.5.26
+fonttools==4.47.2
 gast==0.5.4
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
@@ -12,18 +15,22 @@ grpcio==1.60.0
 h5py==3.10.0
 idna==3.6
 keras==2.15.0
+kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5.2
 MarkupSafe==2.1.4
+matplotlib==3.8.2
 ml-dtypes==0.2.0
 numpy==1.26.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.2.0
+pillow==10.2.0
 protobuf==4.23.4
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.4
 requests==2.31.0
