--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 grpcio==1.60.0
 h5py==3.10.0
+holidays==0.41
 idna==3.6
+joblib==1.3.2
 keras==2.15.0
 kiwisolver==1.4.5
 libclang==16.0.6
@@ -25,7 +27,8 @@ numpy==1.26.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
-pandas==2.2.0
+pandas==2.1.4
+patsy==0.5.6
 pillow==10.2.0
 protobuf==4.23.4
 pyasn1==0.5.1
@@ -36,7 +39,12 @@ pytz==2023.4
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-base==0.7.2
+scikit-learn==1.4.0
+scipy==1.12.0
 six==1.16.0
+sktime==0.26.0
+statsmodels==0.14.1
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
@@ -44,6 +52,7 @@ tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.34.0
 tensorflow-macos==2.15.0
 termcolor==2.4.0
+threadpoolctl==3.2.0
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
