--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,236 @@
 absl-py==2.1.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+altair==5.0.1
+anyio==4.2.0
+appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.0.5
 astunparse==1.6.3
-cachetools==5.3.2
-certifi==2023.11.17
-charset-normalizer==3.3.2
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
+Babel==2.14.0
+backcall==0.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+bing-image-downloader==1.1.2
+bitarray==2.8.1
+bleach==6.1.0
+blinker==1.6.2
+bs4==0.0.1
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.1.6
+comm==0.1.3
 contourpy==1.2.0
 cycler==0.12.1
+Cython==3.0.8
+cytoolz==0.12.2
+data==0.4
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.7
+dm-tree==0.1.8
+docopt==0.6.2
+eth-abi==4.1.0
+eth-account==0.9.0
+eth-hash==0.5.2
+eth-keyfile==0.6.1
+eth-keys==0.4.0
+eth-rlp==0.3.0
+eth-typing==3.4.0
+eth-utils==2.2.0
+exceptiongroup==1.1.2
+executing==0.8.3
+fastjsonschema==2.18.0
+filelock==3.12.3
+flake8==4.0.1
 flatbuffers==23.5.26
-fonttools==4.47.2
+fonttools==4.49.0
+fqdn==1.5.1
+frozendict==2.3.8
+frozenlist==1.4.0
+funcsigs==1.0.2
+future==1.0.0
 gast==0.5.4
-google-auth==2.27.0
+gitdb==4.0.10
+GitPython==3.1.32
+google-auth==2.28.0
 google-auth-oauthlib==1.2.0
+google-images-download==2.8.0
 google-pasta==0.2.0
-grpcio==1.60.0
+gql==3.4.1
+graphql-core==3.2.3
+grpcio==1.60.1
+h11==0.14.0
 h5py==3.10.0
-holidays==0.41
-idna==3.6
+hexbytes==0.3.1
+html5lib==1.1
+icrawler==0.6.7
+idna==3.4
+importlib-metadata==6.8.0
+ipykernel==6.23.3
+ipython==8.4.0
+isoduration==20.11.0
+jedi==0.18.1
+Jinja2==3.1.2
 joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.0.12
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
 keras==2.15.0
 kiwisolver==1.4.5
+kwenta==1.1.0
+latex==0.7.0
 libclang==16.0.6
+lru-dict==1.2.0
+lxml==4.9.3
 Markdown==3.5.2
-MarkupSafe==2.1.4
-matplotlib==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.3
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+mdurl==0.1.2
+MissForest==2.4.2
+mistune==3.0.2
 ml-dtypes==0.2.0
-numpy==1.26.3
+multidict==6.0.4
+multitasking==0.0.11
+namex==0.0.7
+nbclient==0.9.0
+nbconvert==7.16.0
+nbformat==5.9.2
+nest-asyncio==1.5.6
+notebook==7.0.8
+notebook_shim==0.2.3
+numpy==1.26.4
 oauthlib==3.2.2
 opt-einsum==3.3.0
-packaging==23.2
-pandas==2.1.4
+outcome==1.2.0
+overrides==7.7.0
+packaging==23.1
+pandas==1.4.3
+pandocfilters==1.5.1
+parsimonious==0.9.0
+parso==0.8.3
 patsy==0.5.6
-pillow==10.2.0
-protobuf==4.23.4
+peewee==3.17.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.4.13
+platformdirs==3.10.0
+plotly==5.16.0
+pmdarima==2.0.4
+prometheus-client==0.19.0
+prompt-toolkit==3.0.30
+protobuf==4.25.3
+psutil==5.9.5
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+PuLP==2.7.0
+pure-eval==0.2.2
+pyarrow==12.0.1
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pycodestyle==2.8.0
+pycparser==2.21
+pycryptodome==3.18.0
+pydeck==0.8.0
+pyflakes==2.4.0
+Pygments==2.16.1
+Pympler==1.0.1
 pyparsing==3.1.1
+PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2023.4
+python-json-logger==2.0.7
+pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
+pyunormalize==15.0.0
+PyYAML==6.0.1
+pyzmq==25.1.0
+referencing==0.30.2
+regex==2023.8.8
 requests==2.31.0
 requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.5.2
+rlp==3.0.0
+rpds-py==0.9.2
 rsa==4.9
 scikit-base==0.7.2
-scikit-learn==1.4.0
+scikit-learn==1.4.1.post1
 scipy==1.12.0
+selenium==4.11.2
+Send2Trash==1.8.2
+shutilwhich==1.1.0
 six==1.16.0
 sktime==0.26.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+stack-data==0.3.0
 statsmodels==0.14.1
-tensorboard==2.15.1
+streamlit==1.25.0
+tbats==1.1.3
+tempdir==0.7.1
+tenacity==8.2.2
+tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.34.0
+tensorflow-io-gcs-filesystem==0.36.0
 tensorflow-macos==2.15.0
 termcolor==2.4.0
-threadpoolctl==3.2.0
-typing_extensions==4.9.0
-tzdata==2023.4
-urllib3==2.1.0
+terminado==0.18.0
+threadpoolctl==3.3.0
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.3.2
+traitlets==5.9.0
+trio==0.22.2
+trio-websocket==0.10.3
+types-python-dateutil==2.8.19.20240106
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==4.3.1
+uri-template==1.3.0
+urllib3==2.0.4
+validators==0.21.2
+virtualenv==20.24.4
+wcwidth==0.2.5
+web3==6.8.0
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+websockets==11.0.3
 Werkzeug==3.0.1
+wget==3.2
 wrapt==1.14.1
+wsproto==1.2.0
+yarg==0.1.9
+yarl==1.9.2
+yfinance==0.2.31
+zipp==3.16.2
